# pydantic-ai-logfire-demo

./: .env.example  .gitignore  README.md  pyproject.toml
src/pydantic_ai_demo/: __init__.py  get_current_date_agent.py  main.py  search_fourdigits_people.py
